--- a/wzup/Base.lproj/Main.storyboard
+++ b/wzup/Base.lproj/Main.storyboard
@@ -323,22 +323,50 @@
                                                                     <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                     <nil key="highlightedColor"/>
+                                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                        <rect key="frame" x="600" y="9" width="384" height="21"/>
+                                                                    </variation>
                                                                 </label>
+                                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g6F-a2-P9i">
+                                                                    <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="30" id="Pej-kw-Ufb"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="16"/>
+                                                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                                                    <variation key="default">
+                                                                        <mask key="constraints">
+                                                                            <exclude reference="Pej-kw-Ufb"/>
+                                                                        </mask>
+                                                                    </variation>
+                                                                    <variation key="heightClass=regular-widthClass=compact">
+                                                                        <mask key="constraints">
+                                                                            <include reference="Pej-kw-Ufb"/>
+                                                                        </mask>
+                                                                    </variation>
+                                                                </textField>
                                                             </subviews>
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="38" id="5yd-Rc-Mdv"/>
                                                                 <constraint firstItem="iBs-mp-2f5" firstAttribute="top" secondItem="QTy-4f-UEQ" secondAttribute="top" constant="9" id="Ehi-y2-ZxL"/>
                                                                 <constraint firstAttribute="bottom" secondItem="iBs-mp-2f5" secondAttribute="bottom" constant="8" id="OTE-Je-jlI"/>
+                                                                <constraint firstItem="g6F-a2-P9i" firstAttribute="leading" secondItem="QTy-4f-UEQ" secondAttribute="leading" constant="8" id="cag-sq-AJO"/>
                                                                 <constraint firstItem="iBs-mp-2f5" firstAttribute="leading" secondItem="QTy-4f-UEQ" secondAttribute="leading" constant="8" id="ejC-S3-UDK"/>
+                                                                <constraint firstAttribute="bottom" secondItem="g6F-a2-P9i" secondAttribute="bottom" constant="3" id="l6m-5h-P0w"/>
+                                                                <constraint firstAttribute="trailing" secondItem="g6F-a2-P9i" secondAttribute="trailing" constant="8" id="rj9-Q4-Zmk"/>
                                                                 <constraint firstAttribute="trailing" secondItem="iBs-mp-2f5" secondAttribute="trailing" constant="8" id="wHP-vD-30H"/>
                                                             </constraints>
                                                             <variation key="default">
                                                                 <mask key="subviews">
                                                                     <exclude reference="iBs-mp-2f5"/>
+                                                                    <exclude reference="g6F-a2-P9i"/>
                                                                 </mask>
                                                                 <mask key="constraints">
                                                                     <exclude reference="5yd-Rc-Mdv"/>
+                                                                    <exclude reference="cag-sq-AJO"/>
+                                                                    <exclude reference="l6m-5h-P0w"/>
+                                                                    <exclude reference="rj9-Q4-Zmk"/>
                                                                     <exclude reference="Ehi-y2-ZxL"/>
                                                                     <exclude reference="OTE-Je-jlI"/>
                                                                     <exclude reference="ejC-S3-UDK"/>
@@ -346,12 +374,16 @@
                                                                 </mask>
                                                             </variation>
                                                             <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                                <rect key="frame" x="0.0" y="145" width="400" height="38"/>
+                                                                <rect key="frame" x="0.0" y="146" width="400" height="38"/>
                                                                 <mask key="subviews">
                                                                     <include reference="iBs-mp-2f5"/>
+                                                                    <include reference="g6F-a2-P9i"/>
                                                                 </mask>
                                                                 <mask key="constraints">
                                                                     <include reference="5yd-Rc-Mdv"/>
+                                                                    <include reference="cag-sq-AJO"/>
+                                                                    <include reference="l6m-5h-P0w"/>
+                                                                    <include reference="rj9-Q4-Zmk"/>
                                                                     <include reference="Ehi-y2-ZxL"/>
                                                                     <include reference="OTE-Je-jlI"/>
                                                                     <include reference="ejC-S3-UDK"/>
@@ -362,7 +394,7 @@
                                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="AYU-qm-876">
                                                             <rect key="frame" x="-10" y="-10" width="20" height="20"/>
                                                             <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                                <rect key="frame" x="181" y="82" width="20" height="20"/>
+                                                                <rect key="frame" x="600" y="82" width="20" height="20"/>
                                                             </variation>
                                                         </activityIndicatorView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="44U-Wl-qD5">
@@ -384,20 +416,42 @@
                                                                 </mask>
                                                             </variation>
                                                             <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                                <rect key="frame" x="0.0" y="133" width="400" height="6"/>
+                                                                <rect key="frame" x="0.0" y="142" width="400" height="4"/>
                                                                 <mask key="constraints">
                                                                     <exclude reference="Hcs-Sr-KFz"/>
                                                                     <include reference="f6x-ne-d2d"/>
                                                                 </mask>
                                                             </variation>
                                                         </label>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tick.png" translatesAutoresizingMaskIntoConstraints="NO" id="buq-gH-DHz">
+                                                            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="50" id="WnX-CC-5TR"/>
+                                                                <constraint firstAttribute="width" constant="50" id="l4G-se-2fm"/>
+                                                            </constraints>
+                                                            <variation key="default">
+                                                                <mask key="constraints">
+                                                                    <exclude reference="WnX-CC-5TR"/>
+                                                                    <exclude reference="l4G-se-2fm"/>
+                                                                </mask>
+                                                            </variation>
+                                                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                <rect key="frame" x="162" y="44" width="50" height="48"/>
+                                                                <mask key="constraints">
+                                                                    <include reference="WnX-CC-5TR"/>
+                                                                    <include reference="l4G-se-2fm"/>
+                                                                </mask>
+                                                            </variation>
+                                                        </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="44U-Wl-qD5" secondAttribute="trailing" id="4Dh-ap-j4a"/>
                                                         <constraint firstItem="44U-Wl-qD5" firstAttribute="leading" secondItem="p7c-4V-jnl" secondAttribute="leading" id="AKZ-a2-feV"/>
                                                         <constraint firstItem="QTy-4f-UEQ" firstAttribute="leading" secondItem="p7c-4V-jnl" secondAttribute="leading" id="Amu-e3-ae8"/>
+                                                        <constraint firstItem="buq-gH-DHz" firstAttribute="top" secondItem="p7c-4V-jnl" secondAttribute="top" constant="44" id="Ap6-X5-eay"/>
                                                         <constraint firstItem="AYU-qm-876" firstAttribute="leading" secondItem="p7c-4V-jnl" secondAttribute="leading" constant="181" id="Ewa-k5-v8N"/>
+                                                        <constraint firstItem="buq-gH-DHz" firstAttribute="leading" secondItem="p7c-4V-jnl" secondAttribute="leading" constant="162" id="Gdr-fo-U1A"/>
                                                         <constraint firstItem="QTy-4f-UEQ" firstAttribute="top" secondItem="p7c-4V-jnl" secondAttribute="top" constant="142" id="bM6-wT-sj4"/>
                                                         <constraint firstAttribute="bottom" secondItem="QTy-4f-UEQ" secondAttribute="bottom" id="ifx-dl-BLK"/>
                                                         <constraint firstItem="AYU-qm-876" firstAttribute="top" secondItem="p7c-4V-jnl" secondAttribute="top" constant="81" id="mOn-tH-CNZ"/>
@@ -413,6 +467,7 @@
                                                             <exclude reference="QTy-4f-UEQ"/>
                                                             <exclude reference="AYU-qm-876"/>
                                                             <exclude reference="44U-Wl-qD5"/>
+                                                            <exclude reference="buq-gH-DHz"/>
                                                         </mask>
                                                         <mask key="constraints">
                                                             <exclude reference="4Dh-ap-j4a"/>
@@ -424,6 +479,8 @@
                                                             <exclude reference="ifx-dl-BLK"/>
                                                             <exclude reference="tqE-ty-iVy"/>
                                                             <exclude reference="wRr-9R-ipS"/>
+                                                            <exclude reference="Ap6-X5-eay"/>
+                                                            <exclude reference="Gdr-fo-U1A"/>
                                                             <exclude reference="Ewa-k5-v8N"/>
                                                             <exclude reference="mOn-tH-CNZ"/>
                                                         </mask>
@@ -434,6 +491,7 @@
                                                             <include reference="QTy-4f-UEQ"/>
                                                             <include reference="AYU-qm-876"/>
                                                             <include reference="44U-Wl-qD5"/>
+                                                            <include reference="buq-gH-DHz"/>
                                                         </mask>
                                                         <mask key="constraints">
                                                             <include reference="4Dh-ap-j4a"/>
@@ -445,6 +503,8 @@
                                                             <include reference="ifx-dl-BLK"/>
                                                             <include reference="tqE-ty-iVy"/>
                                                             <include reference="wRr-9R-ipS"/>
+                                                            <include reference="Ap6-X5-eay"/>
+                                                            <include reference="Gdr-fo-U1A"/>
                                                             <include reference="Ewa-k5-v8N"/>
                                                             <include reference="mOn-tH-CNZ"/>
                                                         </mask>
@@ -497,11 +557,13 @@
                                         <connections>
                                             <outlet property="availabilityPicture" destination="ECd-7g-Aic" id="fRa-TY-yoK"/>
                                             <outlet property="bottomBar" destination="QTy-4f-UEQ" id="62F-Cc-j0D"/>
+                                            <outlet property="editStatusTextField" destination="g6F-a2-P9i" id="aTq-Nm-TL0"/>
                                             <outlet property="imageLoadingIndicator" destination="AYU-qm-876" id="zFE-ud-s6i"/>
                                             <outlet property="nameLabel" destination="UXa-52-mhb" id="77T-8b-CGM"/>
                                             <outlet property="profilePicture" destination="tUp-96-pMo" id="8s7-3x-7bD"/>
                                             <outlet property="statusImage" destination="p7c-4V-jnl" id="OC1-zb-SXs"/>
                                             <outlet property="statusLabel" destination="iBs-mp-2f5" id="5ZQ-by-oVg"/>
+                                            <outlet property="tickImage" destination="buq-gH-DHz" id="VXz-fa-Co5"/>
                                             <outlet property="topBar" destination="0js-aw-L1u" id="cJK-P1-hOo"/>
                                             <outlet property="uploadImageIndicatorLabel" destination="44U-Wl-qD5" id="81c-AS-oSV"/>
                                         </connections>
@@ -653,7 +715,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AIp-qU-zWm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5242.5" y="431.25"/>
+            <point key="canvasLocation" x="5242.5" y="410.25"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="A71-hH-LXz">
@@ -1319,6 +1381,7 @@
     </scenes>
     <resources>
         <image name="camera-icon.png" width="500" height="500"/>
+        <image name="tick.png" width="1200" height="1200"/>
         <image name="wz-monkey-bg.jpg" width="750" height="1334"/>
     </resources>
 </document>
